k8s/locust-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: locust
      app.kubernetes.io/component: master
  template:
    metadata:
      labels:
        app.kubernetes.io/name: locust
        app.kubernetes.io/component: master
    spec:
      containers:
        - name: locust-worker
          image: YOUR_DOCKER_REGISTERY/locust:1.0.2
